@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2016 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -30,7 +30,9 @@ import java.util.Set;
 
 import org.junit.Test;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 /**
  * @author Rob Harrop
@@ -71,12 +73,12 @@ public class CollectionUtilsTests {
 	public void testMergePrimitiveArrayIntoCollection() {
 		int[] arr = new int[] {1, 2};
 		List<Comparable<?>> list = new LinkedList<>();
-		list.add(new Integer(3));
+		list.add(Integer.valueOf(3));
 
 		CollectionUtils.mergeArrayIntoCollection(arr, list);
-		assertEquals(new Integer(3), list.get(0));
-		assertEquals(new Integer(1), list.get(1));
-		assertEquals(new Integer(2), list.get(2));
+		assertEquals(Integer.valueOf(3), list.get(0));
+		assertEquals(Integer.valueOf(1), list.get(1));
+		assertEquals(Integer.valueOf(2), list.get(2));
 	}
 
 	@Test
@@ -85,7 +87,7 @@ public class CollectionUtilsTests {
 		defaults.setProperty("prop1", "value1");
 		Properties props = new Properties(defaults);
 		props.setProperty("prop2", "value2");
-		props.put("prop3", new Integer(3));
+		props.put("prop3", Integer.valueOf(3));
 
 		Map<String, String> map = new HashMap<>();
 		map.put("prop4", "value4");
@@ -93,7 +95,7 @@ public class CollectionUtilsTests {
 		CollectionUtils.mergePropertiesIntoMap(props, map);
 		assertEquals("value1", map.get("prop1"));
 		assertEquals("value2", map.get("prop2"));
-		assertEquals(new Integer(3), map.get("prop3"));
+		assertEquals(Integer.valueOf(3), map.get("prop3"));
 		assertEquals("value4", map.get("prop4"));
 	}
 
