@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2017 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -24,13 +24,17 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Set;
 
-import org.junit.Rule;
 import org.junit.Test;
-import org.junit.rules.ExpectedException;
 
-import static org.hamcrest.CoreMatchers.*;
-import static org.junit.Assert.*;
-import static org.springframework.util.ObjectUtils.*;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.Assert.assertArrayEquals;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+import static org.springframework.util.ObjectUtils.isEmpty;
 
 /**
  * Unit tests for {@link ObjectUtils}.
@@ -41,9 +45,6 @@ import static org.springframework.util.ObjectUtils.*;
  * @author Sam Brannen
  */
 public class ObjectUtilsTests {
-
-	@Rule
-	public final ExpectedException exception = ExpectedException.none();
 
 	@Test
 	public void isCheckedException() {
@@ -60,10 +61,10 @@ public class ObjectUtilsTests {
 
 	@Test
 	public void isCompatibleWithThrowsClause() {
-		Class<?>[] empty = new Class[0];
-		Class<?>[] exception = new Class[] {Exception.class};
-		Class<?>[] sqlAndIO = new Class[] {SQLException.class, IOException.class};
-		Class<?>[] throwable = new Class[] {Throwable.class};
+		Class<?>[] empty = new Class<?>[0];
+		Class<?>[] exception = new Class<?>[] {Exception.class};
+		Class<?>[] sqlAndIO = new Class<?>[] {SQLException.class, IOException.class};
+		Class<?>[] throwable = new Class<?>[] {Throwable.class};
 
 		assertTrue(ObjectUtils.isCompatibleWithThrowsClause(new RuntimeException()));
 		assertTrue(ObjectUtils.isCompatibleWithThrowsClause(new RuntimeException(), empty));
@@ -101,8 +102,8 @@ public class ObjectUtilsTests {
 		assertTrue(isEmpty(new Object[0]));
 		assertTrue(isEmpty(new Integer[0]));
 
-		assertFalse(isEmpty(new int[] { 42 }));
-		assertFalse(isEmpty(new Integer[] { new Integer(42) }));
+		assertFalse(isEmpty(new int[] {42}));
+		assertFalse(isEmpty(new Integer[] {42}));
 	}
 
 	@Test
@@ -168,8 +169,8 @@ public class ObjectUtilsTests {
 
 	@Test
 	public void toObjectArrayWithNonArrayType() {
-		exception.expect(IllegalArgumentException.class);
-		ObjectUtils.toObjectArray("Not an []");
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				ObjectUtils.toObjectArray("Not an []"));
 	}
 
 	@Test
@@ -271,7 +272,7 @@ public class ObjectUtilsTests {
 	@Test
 	@Deprecated
 	public void hashCodeWithLong() {
-		long lng = 883l;
+		long lng = 883L;
 		int expected = (new Long(lng)).hashCode();
 		assertEquals(expected, ObjectUtils.hashCode(lng));
 	}
@@ -489,12 +490,12 @@ public class ObjectUtilsTests {
 
 	@Test
 	public void nullSafeHashCodeWithLongArray() {
-		long lng = 7993l;
+		long lng = 7993L;
 		int expected = 31 * 7 + (int) (lng ^ (lng >>> 32));
-		lng = 84320l;
+		lng = 84320L;
 		expected = 31 * expected + (int) (lng ^ (lng >>> 32));
 
-		long[] array = {7993l, 84320l};
+		long[] array = {7993L, 84320L};
 		int actual = ObjectUtils.nullSafeHashCode(array);
 
 		assertEquals(expected, actual);
@@ -715,7 +716,7 @@ public class ObjectUtilsTests {
 
 	@Test
 	public void nullSafeToStringWithLongArray() {
-		long[] array = {434l, 23423l};
+		long[] array = {434L, 23423L};
 		assertEquals("{434, 23423}", ObjectUtils.nullSafeToString(array));
 	}
 
@@ -737,7 +738,7 @@ public class ObjectUtilsTests {
 
 	@Test
 	public void nullSafeToStringWithObjectArray() {
-		Object[] array = {"Han", new Long(43)};
+		Object[] array = {"Han", Long.valueOf(43)};
 		assertEquals("{Han, 43}", ObjectUtils.nullSafeToString(array));
 	}
 
@@ -806,9 +807,9 @@ public class ObjectUtilsTests {
 		assertThat(ObjectUtils.caseInsensitiveValueOf(Tropes.values(), "foo"), is(Tropes.FOO));
 		assertThat(ObjectUtils.caseInsensitiveValueOf(Tropes.values(), "BAR"), is(Tropes.BAR));
 
-		exception.expect(IllegalArgumentException.class);
-		exception.expectMessage(is("constant [bogus] does not exist in enum type org.springframework.util.ObjectUtilsTests$Tropes"));
-		ObjectUtils.caseInsensitiveValueOf(Tropes.values(), "bogus");
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				ObjectUtils.caseInsensitiveValueOf(Tropes.values(), "bogus"))
+			.withMessage("Constant [bogus] does not exist in enum type org.springframework.util.ObjectUtilsTests$Tropes");
 	}
 
 	private void assertEqualHashCodes(int expected, Object array) {
@@ -818,6 +819,6 @@ public class ObjectUtilsTests {
 	}
 
 
-	enum Tropes { FOO, BAR, baz }
+	enum Tropes {FOO, BAR, baz}
 
 }
