@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2016 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -18,9 +18,7 @@ package org.springframework.test.util;
 
 import org.junit.Before;
 import org.junit.Ignore;
-import org.junit.Rule;
 import org.junit.Test;
-import org.junit.rules.ExpectedException;
 
 import org.springframework.aop.framework.ProxyFactory;
 import org.springframework.aop.support.AopUtils;
@@ -30,9 +28,17 @@ import org.springframework.test.util.subpackage.Person;
 import org.springframework.test.util.subpackage.PersonEntity;
 import org.springframework.test.util.subpackage.StaticFields;
 
-import static org.hamcrest.CoreMatchers.*;
-import static org.junit.Assert.*;
-import static org.springframework.test.util.ReflectionTestUtils.*;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+import static org.springframework.test.util.ReflectionTestUtils.getField;
+import static org.springframework.test.util.ReflectionTestUtils.invokeGetterMethod;
+import static org.springframework.test.util.ReflectionTestUtils.invokeMethod;
+import static org.springframework.test.util.ReflectionTestUtils.invokeSetterMethod;
+import static org.springframework.test.util.ReflectionTestUtils.setField;
 
 /**
  * Unit tests for {@link ReflectionTestUtils}.
@@ -42,16 +48,13 @@ import static org.springframework.test.util.ReflectionTestUtils.*;
  */
 public class ReflectionTestUtilsTests {
 
-	private static final Float PI = new Float((float) 22 / 7);
+	private static final Float PI = Float.valueOf((float) 22 / 7);
 
 	private final Person person = new PersonEntity();
 
 	private final Component component = new Component();
 
 	private final LegacyEntity entity = new LegacyEntity();
-
-	@Rule
-	public final ExpectedException exception = ExpectedException.none();
 
 
 	@Before
@@ -61,51 +64,51 @@ public class ReflectionTestUtilsTests {
 
 	@Test
 	public void setFieldWithNullTargetObject() throws Exception {
-		exception.expect(IllegalArgumentException.class);
-		exception.expectMessage(startsWith("Either targetObject or targetClass"));
-		setField((Object) null, "id", new Long(99));
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				setField((Object) null, "id", Long.valueOf(99)))
+			.withMessageStartingWith("Either targetObject or targetClass");
 	}
 
 	@Test
 	public void getFieldWithNullTargetObject() throws Exception {
-		exception.expect(IllegalArgumentException.class);
-		exception.expectMessage(startsWith("Either targetObject or targetClass"));
-		getField((Object) null, "id");
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				getField((Object) null, "id"))
+			.withMessageStartingWith("Either targetObject or targetClass");
 	}
 
 	@Test
 	public void setFieldWithNullTargetClass() throws Exception {
-		exception.expect(IllegalArgumentException.class);
-		exception.expectMessage(startsWith("Either targetObject or targetClass"));
-		setField((Class<?>) null, "id", new Long(99));
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				setField((Class<?>) null, "id", Long.valueOf(99)))
+			.withMessageStartingWith("Either targetObject or targetClass");
 	}
 
 	@Test
 	public void getFieldWithNullTargetClass() throws Exception {
-		exception.expect(IllegalArgumentException.class);
-		exception.expectMessage(startsWith("Either targetObject or targetClass"));
-		getField((Class<?>) null, "id");
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				getField((Class<?>) null, "id"))
+			.withMessageStartingWith("Either targetObject or targetClass");
 	}
 
 	@Test
 	public void setFieldWithNullNameAndNullType() throws Exception {
-		exception.expect(IllegalArgumentException.class);
-		exception.expectMessage(startsWith("Either name or type"));
-		setField(person, null, new Long(99), null);
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				setField(person, null, Long.valueOf(99), null))
+			.withMessageStartingWith("Either name or type");
 	}
 
 	@Test
 	public void setFieldWithBogusName() throws Exception {
-		exception.expect(IllegalArgumentException.class);
-		exception.expectMessage(startsWith("Could not find field 'bogus'"));
-		setField(person, "bogus", new Long(99), long.class);
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				setField(person, "bogus", Long.valueOf(99), long.class))
+			.withMessageStartingWith("Could not find field 'bogus'");
 	}
 
 	@Test
 	public void setFieldWithWrongType() throws Exception {
-		exception.expect(IllegalArgumentException.class);
-		exception.expectMessage(startsWith("Could not find field"));
-		setField(person, "id", new Long(99), String.class);
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				setField(person, "id", Long.valueOf(99), String.class))
+			.withMessageStartingWith("Could not find field");
 	}
 
 	@Test
@@ -133,17 +136,17 @@ public class ReflectionTestUtilsTests {
 
 	private static void assertSetFieldAndGetFieldBehavior(Person person) {
 		// Set reflectively
-		setField(person, "id", new Long(99), long.class);
+		setField(person, "id", Long.valueOf(99), long.class);
 		setField(person, "name", "Tom");
-		setField(person, "age", new Integer(42));
+		setField(person, "age", Integer.valueOf(42));
 		setField(person, "eyeColor", "blue", String.class);
 		setField(person, "likesPets", Boolean.TRUE);
 		setField(person, "favoriteNumber", PI, Number.class);
 
 		// Get reflectively
-		assertEquals(new Long(99), getField(person, "id"));
+		assertEquals(Long.valueOf(99), getField(person, "id"));
 		assertEquals("Tom", getField(person, "name"));
-		assertEquals(new Integer(42), getField(person, "age"));
+		assertEquals(Integer.valueOf(42), getField(person, "age"));
 		assertEquals("blue", getField(person, "eyeColor"));
 		assertEquals(Boolean.TRUE, getField(person, "likesPets"));
 		assertEquals(PI, getField(person, "favoriteNumber"));
@@ -247,33 +250,33 @@ public class ReflectionTestUtilsTests {
 
 	@Test
 	public void invokeSetterMethodAndInvokeGetterMethodWithExplicitMethodNames() throws Exception {
-		invokeSetterMethod(person, "setId", new Long(1), long.class);
+		invokeSetterMethod(person, "setId", Long.valueOf(1), long.class);
 		invokeSetterMethod(person, "setName", "Jerry", String.class);
-		invokeSetterMethod(person, "setAge", new Integer(33), int.class);
+		invokeSetterMethod(person, "setAge", Integer.valueOf(33), int.class);
 		invokeSetterMethod(person, "setEyeColor", "green", String.class);
 		invokeSetterMethod(person, "setLikesPets", Boolean.FALSE, boolean.class);
-		invokeSetterMethod(person, "setFavoriteNumber", new Integer(42), Number.class);
+		invokeSetterMethod(person, "setFavoriteNumber", Integer.valueOf(42), Number.class);
 
 		assertEquals("ID (protected method in a superclass)", 1, person.getId());
 		assertEquals("name (private method)", "Jerry", person.getName());
 		assertEquals("age (protected method)", 33, person.getAge());
 		assertEquals("eye color (package private method)", "green", person.getEyeColor());
 		assertEquals("'likes pets' flag (protected method for a boolean)", false, person.likesPets());
-		assertEquals("'favorite number' (protected method for a Number)", new Integer(42), person.getFavoriteNumber());
+		assertEquals("'favorite number' (protected method for a Number)", Integer.valueOf(42), person.getFavoriteNumber());
 
-		assertEquals(new Long(1), invokeGetterMethod(person, "getId"));
+		assertEquals(Long.valueOf(1), invokeGetterMethod(person, "getId"));
 		assertEquals("Jerry", invokeGetterMethod(person, "getName"));
-		assertEquals(new Integer(33), invokeGetterMethod(person, "getAge"));
+		assertEquals(Integer.valueOf(33), invokeGetterMethod(person, "getAge"));
 		assertEquals("green", invokeGetterMethod(person, "getEyeColor"));
 		assertEquals(Boolean.FALSE, invokeGetterMethod(person, "likesPets"));
-		assertEquals(new Integer(42), invokeGetterMethod(person, "getFavoriteNumber"));
+		assertEquals(Integer.valueOf(42), invokeGetterMethod(person, "getFavoriteNumber"));
 	}
 
 	@Test
 	public void invokeSetterMethodAndInvokeGetterMethodWithJavaBeanPropertyNames() throws Exception {
-		invokeSetterMethod(person, "id", new Long(99), long.class);
+		invokeSetterMethod(person, "id", Long.valueOf(99), long.class);
 		invokeSetterMethod(person, "name", "Tom");
-		invokeSetterMethod(person, "age", new Integer(42));
+		invokeSetterMethod(person, "age", Integer.valueOf(42));
 		invokeSetterMethod(person, "eyeColor", "blue", String.class);
 		invokeSetterMethod(person, "likesPets", Boolean.TRUE);
 		invokeSetterMethod(person, "favoriteNumber", PI, Number.class);
@@ -285,9 +288,9 @@ public class ReflectionTestUtilsTests {
 		assertEquals("'likes pets' flag (protected method for a boolean)", true, person.likesPets());
 		assertEquals("'favorite number' (protected method for a Number)", PI, person.getFavoriteNumber());
 
-		assertEquals(new Long(99), invokeGetterMethod(person, "id"));
+		assertEquals(Long.valueOf(99), invokeGetterMethod(person, "id"));
 		assertEquals("Tom", invokeGetterMethod(person, "name"));
-		assertEquals(new Integer(42), invokeGetterMethod(person, "age"));
+		assertEquals(Integer.valueOf(42), invokeGetterMethod(person, "age"));
 		assertEquals("blue", invokeGetterMethod(person, "eyeColor"));
 		assertEquals(Boolean.TRUE, invokeGetterMethod(person, "likesPets"));
 		assertEquals(PI, invokeGetterMethod(person, "favoriteNumber"));
@@ -347,8 +350,8 @@ public class ReflectionTestUtilsTests {
 		assertNull("text", component.getText());
 
 		// Simulate autowiring a configuration method
-		invokeMethod(component, "configure", new Integer(42), "enigma");
-		assertEquals("number should have been configured", new Integer(42), component.getNumber());
+		invokeMethod(component, "configure", Integer.valueOf(42), "enigma");
+		assertEquals("number should have been configured", Integer.valueOf(42), component.getNumber());
 		assertEquals("text should have been configured", "enigma", component.getText());
 
 		// Simulate @PostConstruct life-cycle event
@@ -363,30 +366,30 @@ public class ReflectionTestUtilsTests {
 
 	@Test
 	public void invokeInitMethodBeforeAutowiring() {
-		exception.expect(IllegalStateException.class);
-		exception.expectMessage(equalTo("number must not be null"));
-		invokeMethod(component, "init");
+		assertThatIllegalStateException().isThrownBy(() ->
+				invokeMethod(component, "init"))
+			.withMessageStartingWith("number must not be null");
 	}
 
 	@Test
 	public void invokeMethodWithIncompatibleArgumentTypes() {
-		exception.expect(IllegalStateException.class);
-		exception.expectMessage(startsWith("Method not found"));
-		invokeMethod(component, "subtract", "foo", 2.0);
+		assertThatIllegalStateException().isThrownBy(() ->
+				invokeMethod(component, "subtract", "foo", 2.0))
+		.withMessageStartingWith("Method not found");
 	}
 
 	@Test
 	public void invokeMethodWithTooFewArguments() {
-		exception.expect(IllegalStateException.class);
-		exception.expectMessage(startsWith("Method not found"));
-		invokeMethod(component, "configure", new Integer(42));
+		assertThatIllegalStateException().isThrownBy(() ->
+				invokeMethod(component, "configure", Integer.valueOf(42)))
+			.withMessageStartingWith("Method not found");
 	}
 
 	@Test
 	public void invokeMethodWithTooManyArguments() {
-		exception.expect(IllegalStateException.class);
-		exception.expectMessage(startsWith("Method not found"));
-		invokeMethod(component, "configure", new Integer(42), "enigma", "baz", "quux");
+		assertThatIllegalStateException().isThrownBy(() ->
+				invokeMethod(component, "configure", Integer.valueOf(42), "enigma", "baz", "quux"))
+			.withMessageStartingWith("Method not found");
 	}
 
 	@Test // SPR-14363
@@ -404,8 +407,8 @@ public class ReflectionTestUtilsTests {
 
 	@Test // SPR-14363
 	public void invokeMethodOnLegacyEntityWithSideEffectsInToString() {
-		invokeMethod(entity, "configure", new Integer(42), "enigma");
-		assertEquals("number should have been configured", new Integer(42), entity.getNumber());
+		invokeMethod(entity, "configure", Integer.valueOf(42), "enigma");
+		assertEquals("number should have been configured", Integer.valueOf(42), entity.getNumber());
 		assertEquals("text should have been configured", "enigma", entity.getText());
 	}
 
